--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             border-radius: 40px;
             text-decoration: none;
             position: relative;
-            /* overflow: hidden; */
+            overflow: hidden;
         }
 
         a span {
@@ -95,6 +95,11 @@
                 transform: translate(-50%, -75%) rotate(360deg);
             }
         }
+
+        .footer {
+            position: absolute;
+            bottom: 0;
+        }
     </style>
 
 </head>
@@ -105,6 +110,10 @@
         <span>潛水</span>
         <div class="liquid"></div>
     </a>
+
+    <div class="footer">
+        &copy; 2022/04/13 by Anddy
+    </div>
 
 </body>
 
